[gd_scene load_steps=8 format=3 uid="uid://cdem0qwd86q7t"]

[ext_resource type="Script" path="res://misc_scenes/player_ui.gd" id="1_5yff7"]
[ext_resource type="FontFile" uid="uid://byo6fct4u77e6" path="res://assets/fonts/m3x6.ttf" id="1_jnfvo"]
[ext_resource type="Theme" uid="uid://btn2pknwbkdml" path="res://resources/ui_theme.tres" id="1_sy3uw"]

[sub_resource type="Gradient" id="Gradient_owpxs"]
offsets = PackedFloat32Array(0, 0.657143, 1)
colors = PackedColorArray(1, 1, 1, 0.505882, 1, 1, 1, 0.309804, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1oew6"]
gradient = SubResource("Gradient_owpxs")
width = 6
height = 6
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="LabelSettings" id="LabelSettings_pb07d"]
line_spacing = -4.0
font = ExtResource("1_jnfvo")
font_color = Color(1, 1, 1, 0.52549)

[sub_resource type="LabelSettings" id="LabelSettings_aq4ru"]
line_spacing = -4.0
font = ExtResource("1_jnfvo")
font_color = Color(1, 1, 1, 0.203922)

[node name="PlayerUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_sy3uw")
script = ExtResource("1_5yff7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = -4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2

[node name="ItemCooldown" type="TextureProgressBar" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.0
value = 0.25
fill_mode = 4
texture_progress = SubResource("GradientTexture2D_1oew6")

[node name="Health" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "HP: "
label_settings = SubResource("LabelSettings_pb07d")

[node name="ItemInfo" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "Item: Item Name
Uses: 3/3"
label_settings = SubResource("LabelSettings_aq4ru")
autowrap_mode = 3

[node name="EffectIcons" type="GridContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
columns = 5
